name:                pkcs12-hs
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/tkawachi/pkcs12-hs#readme
license:             BSD3
license-file:        LICENSE
author:              Takashi Kawachi
maintainer:          tkawachi@gmail.com
copyright:           2016 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Crypto.Pkcs12
                     , Crypto.Pkcs12.BmpString
                     , Crypto.Pkcs12.Mac
                     , Crypto.Pkcs12.Pbkdf
                     , Crypto.X509.Pkix
  build-depends:       base >= 4.7 && < 5
                     , asn1-encoding
                     , asn1-types
                     , bytestring
                     , split
  default-language:    Haskell2010

executable pkcs12-hs-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , pkcs12-hs
  default-language:    Haskell2010

test-suite pkcs12-hs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , pkcs12-hs
                     , hspec
                     , QuickCheck
                     , bytestring
                     , base16-bytestring
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/tkawachi/pkcs12-hs
